--- a/deploy/compose.yaml
+++ b/deploy/compose.yaml
@@ -15,6 +15,7 @@ services:
     command: [ "-config.file=/etc/tempo.yaml" ]
     volumes:
       - "./tempo.yaml:/etc/tempo.yaml"
+      - "./tempo-data:/tmp/tempo"
 
   grafana:
     image: grafana/grafana:latest
