--- a/deploy/tempo.yaml
+++ b/deploy/tempo.yaml
@@ -23,3 +23,36 @@ storage:
     # Local configuration for filesystem storage.
     local:
       path: /tmp/tempo/blocks          # Directory to store the TSDB blocks.
+
+# Configures the metrics generator component of Tempo.
+metrics_generator:
+  # Specifies which processors to use.
+  processor:
+    # Span metrics create metrics based on span type, duration, name and service.
+    span_metrics:
+        # Configure extra dimensions to add as metric labels.
+        dimensions:
+          - http.method
+          - http.target
+          - http.status_code
+          - service.version
+  # The registry configuration determines how to process metrics.
+  registry:
+    collection_interval: 5s                 # Create new metrics every 5s.
+    # Configure extra labels to be added to metrics.
+    external_labels:
+      source: tempo                         # Add a `{source="tempo"}` label.
+  # Configures where the store for metrics is located.
+  storage:
+    # WAL for metrics generation.
+    path: /tmp/tempo/generator/wal
+    # Where to remote write metrics to.
+    remote_write:
+      - url: http://mimir:9009/api/v1/push  # URL of locally running Mimir instance.
+        send_exemplars: true # Send exemplars along with their metrics.
+  traces_storage:
+    path: /tmp/tempo/generator/traces
+
+# Global override configuration.
+overrides:
+  metrics_generator_processors: ['span-metrics','local-blocks'] # The types of metrics generation to enable for each tenant.
